Fixed the date picker not showing issue

--- a/src/App.css
+++ b/src/App.css
@@ -605,12 +605,12 @@ h1,
   right: 0px;
 }
 
-.top-1\/2 {
-  top: 50%;
-}
-
 .right-5 {
   right: 1.25rem;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .z-10 {
@@ -855,6 +855,11 @@ h1,
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -888,6 +893,11 @@ h1,
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .text-left {
